--- a/notes/digsigs.tex
+++ b/notes/digsigs.tex
@@ -157,9 +157,23 @@ The padding in the scheme also appears to provide additional protections: If, fo
 We now move to a formal proof of $\UFCMA_{\DS}$ security for a hash-based RSA construction that \emph{does} provide such security.  We use a full domain hash to avoid such padding leakage issues, and to simplify our reasoning about the security of the scheme.
 
 \subsection{A Secure Scheme: Full Domain RSA}
-
-
-We now introduce the full domain hash (FDH) RSA scheme, denoted $\DS$.  Figure~\ref{fig:fulldomrsa} shows the operation of this scheme, a natural extension of plaintext RSA that simply hashes the message before exponentiating with a secret exponent.  Note that we model the hash function as a random oracle, which masks some subtle technical issues surrounding use of a hash with RSA; because $H(M)$ needs to be raised to the $d$ (mod $N$), $H(M)$ must output an element of the RSA group that can be exponentiated in the group.  So, the hash function used depends on the choice of $d$, complicating analysis.  We ignore these details in our consideration of the protocol, as they can be solved in practice by using a fixed output length hash that is indifferentiable from random oracles using existing hash functions, and mapping the output of the function to the relevant RSA group.
+\begin{figure}[h]
+\centering
+\fpage{0.22}{
+	\underline{$\sign((N,d),M)$}\\
+	$\sigma\gets \Horacle(M)^d \mod N$\\
+	Return $\sigma$
+}
+\fpage{0.22}{
+	\underline{$\ver((N,e),M,\sigma)$} \\
+	$X\gets \sigma^e \mod N$\\
+	If $X=\Horacle(M)$ then Return 1\\
+	Return 0
+}
+\caption{The full domain hash (FDH) digital signature scheme.}
+\label{fig:fulldomrsa}
+\end{figure}
+We now introduce the full domain hash (FDH) RSA scheme, denoted $\DS$.  Figure~\ref{fig:fulldomrsa} shows the operation of this scheme, a natural extension of plaintext RSA that simply hashes the message before exponentiating with a secret exponent.  Note that we model the hash function as a random oracle, which masks some subtle technical issues surrounding use of a hash with RSA; because $\Horacle(M)$ needs to be raised to the $d$ (mod $N$), $\Horacle(M)$ must output an element of the RSA group that can be exponentiated in the group.  So, the hash function used depends on the choice of $d$, complicating analysis.  We ignore these details in our consideration of the protocol, as they can be solved in practice by using a fixed output length hash that is indifferentiable from random oracles using existing hash functions, and mapping the output of the function to the relevant RSA group.
 
 We now analyze the $\UFCMA_\DS$ security of our scheme.  We do so by reduction to RSA, showing specifically that for any adversary $A$ breaking the $\UFCMA_\DS$ of full domain RSA, we can construct an adversary $B$ for the RSA game with almost the same advantage.  Formally, let $q_h$ be the number of hash oracle queries performed by $A$ and $q_s$ be the number of signing oracle queries performed by $A$:
 
@@ -369,7 +383,7 @@ $(M^*,\sigma^*) \getsr \advA^{\HashSim,\SignSim}((N,e))$\\
 If $(M^* \ne M_{i^*})$ then \\
 \myInd $\badtrue$\\
 \myInd $X' \getsr \Z_N^*$\\
-$X' \gets \sigma^*$\\
+Else $X' \gets \sigma^*$\\
 Ret $(X = X')$\medskip
 
 \underline{$\HashSim(M)$}\\
@@ -399,7 +413,7 @@ $(M^*,\sigma^*) \getsr \advA^{\HashSim,\SignSim}((N,e))$\\
 If $(M^* \ne M_{i^*})$ then \\
 \myInd $\badtrue$\\
 \myInd $X' \gets \sigma^*$\\
-$X' \gets \sigma^*$\\
+Else $X' \gets \sigma^*$\\
 Ret $(X = X')$\medskip
 
 \underline{$\HashSim(M)$}\\
@@ -430,11 +444,30 @@ Ret $\sigma_i$
 \label{fig:fulldomainsignproof}
 \end{figure}
 
-\textbf{TODO Lucy; describe/check Figure~\ref{fig:fulldomainsignproof} and merge with the toy proof; the proof should be mainly unchanged.}
-
+\textbf{TODO Lucy; describe/check Figure~\ref{fig:fulldomainsignproof} and merge with the toy proof; the proof should be mainly unchanged.}\\
+- the bound above with $\Prob{\bad_0}$ doesn't work b/c probability is high (bad0 bounded by $1-\frac{1}{q}$)\\
+- Instead do $\Prob{\G_0\Rightarrow\true \land \good_0}=\Prob{\G_0\Rightarrow\true \land \good_0}$\\
+\begin{align*}
+\AdvOWF{\RSAk}{\advB} &= \Prob{\G_0\Rightarrow\true}\\
+&\geq \Prob{\G_0\Rightarrow\true \land \good_0}\\
+&= \Prob{\G_1\Rightarrow\true \land \good_1}\\
+&= \Prob{\G_1\Rightarrow\true}\cdot \Prob{\good_1}\\
+&= \AdvUFCMA{\DS}{\advA}\cdot\frac{1}{q}
+\end{align*}
+- $q=q_h+q_s+1$\\
+- G0 to G1 if we don't get to the place where the code deviates\\
+- event that G1 outputs true is independent of G1 because of the way you change the game after bad is set\\
+- choice of $i^*$ has no bearing on the output (?)
 \end{proof}
 
+Concrete security implications (50:00)
+We can actually get a better bound, 
+\bnm
+\AdvUFCMA{\DS}{\advA}\leq 2.72\cdot(q_s+1)\cdot \AdvOWF{\RSAk}{\advB'}
+\enm
+reference Boneh-Shoup/Coron. embed OWF challenge $Y$ in multiple H[M] values. $Y_i=Y\cdot r_i^e\mod N$
 
+DL sigs starting 1:00:30
 \subsection{Questions}
 
 \begin{enumerate}
