added last two lecture slides

--- a/notes/main.tex
+++ b/notes/main.tex
@@ -32,7 +32,6 @@
 \fi
 
 
-
 \begin{document}
 
 \maketitle
@@ -148,6 +147,11 @@
 \input{idprots}
 \newpage
 \input{zk}
+\newpage
+\input{bilinear}
+\newpage
+\input{lattices}
+
 
 \printbibliography
 
