--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -1070,7 +1070,9 @@
 \newcommand{\vect}{{{\bf t}}}
 \newcommand{\vecx}{{{\bf x}}}
 \newcommand{\vecc}{{{\bf c}}}
+\newcommand{\vece}{{{\bf e}}}
 \newcommand{\vecK}{{{\bf K}}}
+\newcommand{\vecv}{{{\bf v}}}
 \newcommand{\vecy}{{{\bf y}}}
 \newcommand{\vecz}{{{\bf z}}}
 \newcommand{\vech}{{{\bf h}}}
@@ -1762,7 +1764,6 @@
 \newcommand{\extclient}{\ext_c}
 \newcommand{\extserver}{\ext_s}
 
-\newcommand{\msk}{{ms}}
 
 
 
@@ -2168,6 +2169,7 @@
 \newcommand{\AdvINDSIM}[2]{\Adv^{\mathrm{ind\dash sim}}_{#1}(#2)}
 
 
+\newcommand{\KgOracle}{\textnormal{Kg}}
 \newcommand{\EncOracle}{\textnormal{Enc}}
 \newcommand{\DecOracle}{\textnormal{Dec}}
 \newcommand{\EncSim}{\textnormal{EncSim}}
@@ -2271,6 +2273,18 @@
 \newcommand{\Simu}{\textsf{Sim}}
 \newcommand{\ProofOracle}{\textnormal{Prove}}
 
+\newcommand{\pair}{\textbf{e}}
+\newcommand{\mpk}{mpk}
+\newcommand{\msk}{msk}
+\newcommand{\IBEpg}{\textsf{pg}}
+\newcommand{\IBEkg}{\textsf{kg}}
+\newcommand{\IBEenc}{\textsf{enc}}
+\newcommand{\IBEdec}{\textsf{dec}}
+\newcommand{\id}{id}
+
+
+\newcommand{\IBE}{\textsf{IBE}}
+\newcommand{\INDIDCPA}{\textnormal{IND-ID-CPA}}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
