--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -506,4 +506,11 @@ url={http://csrc.nist.gov/nissc/1997}
     organization={Springer}
 }
 
-
+@inproceedings{coron2000exact,
+	title={On the exact security of full domain hash},
+	author={Coron, Jean-S{\'e}bastien},
+	booktitle={Annual International Cryptology Conference},
+	pages={229--235},
+	year={2000},
+	organization={Springer}
+}
